fix(templates): template whitespace, drilled load and auto scroll on template output (#75)
* chore(fix): implemented sticky footer to base


* feat: added fixed scroll feature on templates


* chore: fixes


* chore: fixes


* update: development


* dev: load state


* feat: drilled load state on all template sample render


* chore: fixes


---------

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
-body,
-html {
+html,
+body {
+  height: 100vh;
   margin: 0;
   padding: 0;
 }
